TestSuite/errors/err0248.pas
var a := Arr(6,2,3);
var q := a?.Max;
 
begin
end.